# Canvas

./: CMakeLists.txt  Makefile  README.md  build.sh  prog
assets/textures/: line
include/: gui.hpp
include/GEO/: Figure.hpp  FigureManager.hpp
include/GUI/: AssetManager.hpp  CWidget.hpp  Canvas.hpp  CanvasMaster.hpp  Cleaner.hpp  Clickable.hpp  CollorRegulator.hpp  Context.hpp  Events.hpp  InstrumentalPanel.hpp  ModeButton.hpp  ModeButtons.hpp  Mouse.hpp  Panel.hpp  Pixel.hpp  SimpleView.hpp  Text.hpp  Texture.hpp  Widget.hpp  coordinate.hpp  gui_lib.hpp
include/GUI/useless/: View.hpp
src/: main.cpp
src/GEO/: Figure.cpp  Figure.hpp  FigureManager.cpp  FigureManager.hpp  geo_lib.hpp
src/GUI/: AssetManager.cpp  AssetManager.hpp  CWidget.hpp  CWidgets.hpp  CamvasMaster.cpp  Canvas.cpp  Canvas.hpp  CanvasMaster.cpp  CanvasMaster.hpp  CanvasWidget.hpp  Cleaner.cpp  ClearButtom.hpp  Clickable.cpp  Clickable.hpp  CollorRegulator.cpp  CollorRegulator.hpp  Context.cpp  Context.hpp  Events.hpp  ModeButton.cpp  ModeButtons.cpp  Mouse.cpp  Panel.cpp  Panel.hpp  Projector.cpp  SimpleView.cpp  Text.cpp  View.cpp  View.hpp  Widget.cpp  Widget.hpp  coordinate.hpp  gui.hpp  gui_lib.cpp  gui_lib.hpp
